apps/base/linkding/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`linkding.rickweb.net`)
      kind: Rule
      services:
        - name: linkding
          port: 9090
